src/objects/Lead_Forecast__c.object
<CustomObject>
    <description>This object will be used to forecast marketing leads for a given month or quarter</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Campaigns &amp; Digital Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Owner__c</fullName>
        <label>Forecast Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Amy Webb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Christin Rhodes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debra Thai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fred Love</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gavin Cohen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hope Hartman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irina Baiasu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jillian Daley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Poppy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judy Perez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karey Willms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kristi Ibello</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Mieuli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marion Gardoce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Megan Wiseman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paul Scarrott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rosemary Medeiros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sianne Chen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sophia Willems</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forecast_Owner_s_Commentary__c</fullName>
        <label>Forecast Owner&apos;s Commentary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forecast_Quarter__c</fullName>
        <inlineHelpText>Leads expected to be loaded during the quarter</inlineHelpText>
        <label>Forecast Quarter Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosted_Events_Planned_del__c</fullName>
        <label>Hosted Events Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Events_Planned_del__c</fullName>
        <label>Industry Events Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Model__c</fullName>
        <label>Lead Model</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_1_Lead_Forecast__c</fullName>
        <label>Month 1 Lead Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_1_Start_Date__c</fullName>
        <label>Month 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_2_Lead_Forecast__c</fullName>
        <label>Month 2 Lead Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_2_Start_Date__c</fullName>
        <label>Month 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Month_3_Lead_Forecast__c</fullName>
        <label>Month 3 Lead Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_3_Start_Date__c</fullName>
        <label>Month 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Digital_Activities_Planned__c</fullName>
        <description>Leads expected from non paid digital activities such as newsletters, edm campaigns etc.</description>
        <label>Other Digital Activities Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Digital_Activities_Planned__c</fullName>
        <description>Includes syndication, banner ads etc.</description>
        <label>Paid Digital Activities Planned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarterly_Lead_Forecast__c</fullName>
        <formula>Month_1_Lead_Forecast__c +  Month_2_Lead_Forecast__c +  Month_3_Lead_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter&apos;s Lead Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Area__c</fullName>
        <label>Sales Area</label>
        <picklist>
            <controllingField>Sales_Region__c</controllingField>
            <picklistValues>
                <fullName>APJ ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APJ SE Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Scandinavia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Central North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Central South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA East North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA East South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA West North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA West South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <controllingField>Sales_Theater__c</controllingField>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Theater__c</fullName>
        <label>Sales Theater</label>
        <picklist>
            <picklistValues>
                <fullName>APJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Lead Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Forecast_Owner__c</columns>
        <columns>Quarterly_Lead_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lead Forecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leads Forecast</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>